# uqmi

./: .gitignore  CMakeLists.txt  commands-dms.c  commands-dms.h  commands-nas.c  commands-nas.h  commands-uim.c  commands-uim.h  commands-wds.c  commands-wds.h  commands-wms.c  commands-wms.h  commands.c  commands.h  dev.c  main.c  mbim.c  qmi-enums-wds.h  qmi-message.h  uqmi.h
common/: mbim.c  mbim.h  utils.c  utils.h
data/: gen-code.pl  gen-common.pm  qmi-service-wda.json
uqmi/: CMakeLists.txt  commands-nas.c  commands-uim.c  commands-wda.c  commands-wda.h  commands-wds.c  commands-wds.h  commands-wms.c  dev.c  uqmi.c  uqmi.h
uqmid/: CMakeLists.txt  ctrl.c  ctrl.h  ddev.c  gsmtap_util.c  gsmtap_util.h  gsmtapv3.h  logging.h  modem.c  modem.h  modem_fsm.c  modem_fsm.h  modem_tx.c  modem_tx.h  services.c  services.h  sim.c  sim.h  sim_fsm.c  sim_fsm.h  test_sim.c  ubus.c  ubus.h  uqmid.c  uqmid.h  uqmid.hotplug.sh  uqmid.init.sh  uqmid.proto.sh  wwan.c  wwan.h
uqmid/examples/: 1_add.sh  2_configure.sh  3_remove.sh  x_dump.sh
uqmid/osmocom/: CMakeLists.txt  README.md  fsm.c  fsm.h  logging.h  timer.c  timer.h  utils.c  utils.h
uqmid/utils/: README.md  compile.sh  gsmtap_read.c  test_gsmtap.c
